--- a/job-portal-backend/pom.xml
+++ b/job-portal-backend/pom.xml
@@ -32,6 +32,9 @@
 
     <properties>
         <java.version>21</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <bytebuddy.agent.version>1.15.11</bytebuddy.agent.version>
     </properties>
 
     <dependencies>
@@ -173,7 +176,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <!-- Explicit Mockito agent avoids JDK dynamic-attach warnings and future breakage -->
+                    <argLine>--enable-preview -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${bytebuddy.agent.version}/byte-buddy-agent-${bytebuddy.agent.version}.jar</argLine>
                 </configuration>
             </plugin>
             <plugin>
