--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 ############### Root ###############
 .idea
 **/.DS_Store
-
-### Project Folders ###
 .env
 secrets/
 my-app-logs/
 mysql-data/
+doc/notes/dev-notes.txt
+
+# Keep sanitized templates in git, keep private exports out of git.
+doc/insomnia/*-private.yaml
+doc/insomnia/*-local.yaml
+doc/insomnia/insomnia-*.yaml
+!doc/insomnia/insomnia-template.yaml
 
 
 ############### Back End ###############
@@ -53,11 +58,3 @@ job-portal-frontend/*.ntvs*
 job-portal-frontend/*.njsproj
 job-portal-frontend/*.sln
 job-portal-frontend/*.sw?
-
-############### Insomnia ###############
-
-# Keep sanitized templates in git, keep private exports out of git.
-doc/insomnia/*-private.yaml
-doc/insomnia/*-local.yaml
-doc/insomnia/insomnia-*.yaml
-!doc/insomnia/insomnia-template.yaml
