--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ secrets/
 my-app-logs/
 mysql-data/
 doc/notes/dev-notes.txt
-doc/notes/skills/
+doc/skills/
 
 # Keep sanitized templates in git, keep private exports out of git.
 doc/insomnia/*-private.yaml
